# Garage

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  vcpkg.json
Private/: Test.cpp
Public/Garage/: Test.hpp
include/garage/: application.hpp  renderer.hpp  resource_base.hpp
include/garage/base/: defines.hpp  types.hpp
include/garage/base/rendering/: renderer.hpp  renderer_base.hpp
include/garage/dx12/: renderer_dx12.hpp
include/garage/gl/: renderer_gl.hpp
include/garage/graphics/: renderer_base.hpp
include/garage/graphics/gl/: renderer_gl.hpp  shader_gl.hpp
include/garage/objects/: component.hpp  component.inl  entity.hpp  entity.inl  object.hpp
include/garage/platform/graphics/: shader_base.hpp
include/garage/platform/graphics/gl/: shader_gl.hpp
include/garage/rendering/: mesh.hpp  render_device.hpp  renderer.hpp  shader.hpp  texture.hpp  vertex_buffer.hpp
include/garage/resource/: resource.hpp  resource_base.hpp  resources.hpp  shader_base.hpp
src/: application.cpp  renderer.cpp
src/dx12/: renderer_dx12.cpp
src/gl/: renderer_gl.cpp
src/platform/: application.cpp
src/platform/graphics/gl/: renderer_gl.cpp  shader_gl.cpp
src/platform/rendering/: renderer.cpp
src/rendering/: renderer.cpp
src/rendering/gl/: mesh_gl.cpp  mesh_gl.hpp  render_device_gl.cpp  render_device_gl.hpp  shader_gl.cpp  shader_gl.hpp  texture_gl.cpp  texture_gl.hpp  vertex_buffer_gl.cpp  vertex_buffer_gl.hpp
